--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/WakingApp/app",
   "dependencies": {
-    "express": "~4.9.8"
+    "consolidate": "^0.10.0",
+    "express": "~4.9.8",
+    "nunjucks": "^1.1.0"
   }
 }
