--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "consolidate": "^0.10.0",
     "express": "~4.9.8",
-    "nunjucks": "^1.1.0"
+    "nunjucks": "^1.1.0",
+    "request": "^2.51.0",
+    "underscore": "^1.7.0"
   }
 }
