--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "consolidate": "^0.10.0",
     "express": "~4.9.8",
-    "nunjucks": "^1.1.0"
+    "nunjucks": "^1.1.0",
+    "socket.io": "~1.3.2"
   }
 }
