--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
   "homepage": "https://github.com/WakingApp/app",
   "dependencies": {
     "consolidate": "^0.10.0",
+    "cookie-parser": "^1.3.3",
     "express": "~4.9.8",
+    "express-session": "^1.10.1",
+    "google-calendar": "^1.3.2",
     "nunjucks": "^1.1.0",
+    "passport": "^0.2.1",
+    "passport-google-oauth": "^0.1.5",
     "request": "^2.51.0",
-    "underscore": "^1.7.0",
-    "socket.io": "~1.3.2"
+    "socket.io": "~1.3.2",
+    "underscore": "^1.7.0"
   }
 }
