--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "passport": "^0.2.1",
     "passport-google-oauth": "^0.1.5",
     "request": "^2.51.0",
-    "socket.io": "~1.3.2",
+    "socket.io": "^1.3.2",
     "underscore": "^1.7.0"
   }
 }
