--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "express": "~4.9.8",
     "express-session": "^1.10.1",
     "google-calendar": "^1.3.2",
+    "lame": "^1.1.2",
     "nunjucks": "^1.1.0",
     "passport": "^0.2.1",
     "passport-google-oauth": "^0.1.5",
     "request": "^2.51.0",
     "socket.io": "^1.3.2",
+    "speaker": "^0.2.2",
     "underscore": "^1.7.0"
   }
 }
